--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@tailwindcss/postcss": "^4.1.15"
   },
   "devDependencies": {
     "@angular/build": "^20.3.7",
